GRAXConnect/main/default/objects/GRAXQuery__c/GRAXQuery__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the custom fields and filters used by GRAX Connect</description>
    <label>GRAX : Configuration</label>
    <nameField>
        <displayFormat>GRAX-{000000}</displayFormat>
        <label>GRAXQueries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX : Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>