GRAXConnect/main/default/objects/GRAXQuery__c/fields/Do_Not_Store_Data__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Store_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only check this if you do NOT want to store data. If you have compliant data you want relationships but not data stored.</description>
    <inlineHelpText>Only check this if you do NOT want to store data. If you have compliant data you want relationships but not data stored.</inlineHelpText>
    <label>Do Not Store Data</label>
    <type>Checkbox</type>
</CustomField>