GRAXConnect/main/default/objects/GRAXQuery__c/fields/Enable_Audit_Log__c.field-meta.xml
<CustomField>
    <fullName>Enable_Audit_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Audit Log</label>
    <type>Checkbox</type>
</CustomField>