GRAXConnect/main/default/objects/GRAXQuery__c/fields/GRAX_Configured__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Configured__c</fullName>
    <label>GRAX Configured</label>
    <type>DateTime</type>
</CustomField>