GRAXConnect/main/default/objects/GRAXQuery__c/fields/graxconfig__c.field-meta.xml
<CustomField>
    <fullName>graxconfig__c</fullName>
    <label>graxconfig</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>