GRAXConnect/main/default/objects/GRAXQuery__c/fields/Hourly_Synch_Period__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Synch_Period__c</fullName>
    <label>Hourly Synch Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>