GRAXConnect/main/default/objects/GRAXQuery__c/fields/Last_Synch__c.field-meta.xml
<CustomField>
    <fullName>Last_Synch__c</fullName>
    <label>Last Synch</label>
    <type>DateTime</type>
</CustomField>