GRAXConnect/main/default/objects/GRAXQuery__c/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <label>Order By</label>
    <type>TextArea</type>
</CustomField>