GRAXConnect/main/default/objects/GRAXQuery__c/fields/Total_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Records_Processed__c</fullName>
    <label>Total Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>