GRAXConnect/main/default/objects/GRAXQuery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ObjectName__c</columns>
    <columns>Total_Records_Processed__c</columns>
    <columns>GRAX_Configured__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>