GRAXConnect/main/default/objects/GRAXQuery__c/listViews/All_GRAX_Queries.listView-meta.xml
<ListView>
    <fullName>All_GRAX_Queries</fullName>
    <columns>NAME</columns>
    <columns>ObjectName__c</columns>
    <columns>Selected_Fields__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All GRAX Queries</label>
</ListView>